# LogCost

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_TEMPLATE.md  SECURITY.md  pyproject.toml  sidecar.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-to-pypi.yml
benchmarks/: tracker_benchmark.py
docs/: cost_calculation.md  faq.md  integration_guide.md  quickstart.md
examples/django_app/: README.md  manage.py
examples/django_app/core/: __init__.py  views.py
examples/django_app/django_app/: __init__.py  settings.py  urls.py
examples/fastapi_app/: README.md  main.py
examples/flask_app/: README.md  app.py
examples/kubernetes/: README.md  deployment-with-init-container.yaml  deployment.yaml
logcost/: __init__.py  analyzer.py  cli.py  exporters.py  notifiers.py  tracker.py  utils.py
tests/: __init__.py  log_helper.py  test_analyzer.py  test_cli.py  test_export_behavior.py  test_exporters.py  test_fastapi_integration.py  test_notifiers.py  test_tracker.py
