[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logcost"
version = "0.1.3"
description = "Measure and analyze Python logging costs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "LogCost Contributors" }]
keywords = ["logging", "cost", "analysis", "monitoring", "observability"]
dependencies = []

[project.urls]
Homepage = "https://github.com/ubermorgenland/LogCost"
Repository = "https://github.com/ubermorgenland/LogCost"
Issues = "https://github.com/ubermorgenland/LogCost/issues"

[project.scripts]
logcost = "logcost.cli:main"

[tool.setuptools.packages.find]
include = ["logcost"]
